2004-08-05  Andreas Kupries  <andreask@activestate.com>

	* library/zipvfs.tcl (Data): Fixed [SF Tclvfs Bug 1003591]. This
	  reverts an incomplete and unrecorded fix for handling dashes at
	  the beginning of data, giving precedence to '2004-07-04 @
	  library/vfsUtils.tcl' instead, see below. The unrecorded fix was
	  entered two days before and clashes with the other one. As it
	  was incomplete the other fix was chosen, despite coming later.

2004-08-04  Andreas Kupries  <andreask@activestate.com>

	* library/zipvfs.tcl (EndOfArchive): Fixed [SF Tclvfs Bug
	  1003574]. Added code preventing us from seeking before the
	  beginning of the zip file.

2004-07-15  Andreas Kupries  <andreask@activestate.com>

	* doc/vfs-fsapi.man: Clarified description of the close callback
	the handler method 'open' may set up. Especially noted that
	'close' must not be called from within this callback, that it is
	done by the caller itself.

2004-07-15  Vince Darley <vincentdarley@sourceforge.net>

	* doc/*: fix to removedirectory docs which should say to return
	a posix EEXIST error if the directory is non-empty.

2004-07-04  Andreas Kupries <andreas_kupries@users.sourceforge.net>
	
	* library/vfsUtils.tcl (crc, zip): Modified the Trf adapter
	  commands. They are now adding in a "--" before the last argument
	  they get, to ensure its interpretation as data instead of being
	  misinterpreted as option should it begin with a dash. Without
	  this adding a file beginning with a dash to a filesystem will
	  fail.

2004-06-29  Vince Darley <vincentdarley@sourceforge.net>

	* library/zipvfs.tcl: fix to bug finding zip header (reported on
	Tcl'ers wiki).

2004-06-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: corrected targets that use 'for' over what may be
	an empty list.  Cleaned up echo output.

	* generic/vfs.c (Vfs_Init): added #ifndef PACKAGE_VERSION for
	non-TEA based build system.

2004-06-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* examples/simpleExamples.tcl: